<resources>
    <string name="app_name">Purrito</string>
    <string name="cd_favorites">Favorites</string>
    <string name="favorites_label">Favorites</string>
    <string name="cd_dogs">Dogs</string>
    <string name="dogs_label">Dogs</string>
    <string name="cd_cats">Cats</string>
    <string name="cats_label">Cats</string>
    <string name="explore_label">Explore</string>
    <string name="share_label">Share</string>
    <string name="cancel_label">Cancel</string>
    <string name="remove">Remove</string>
    <string name="remove_favorite_title">Remove from favorites?</string>
    <string name="remove_favorite_message">This image will be removed from your favorites.</string>

    <string name="transition_name">name-%s</string>
    <string name="download_label">Download</string>

    <string name="permission_dialog_title">Permission Request</string>
    <string name="permission_dialog_message">Purrito needs storage permission to download this file. Go to Settings -> Permissions and check Storage and then try again.</string>
    <string name="settings_label">Settings</string>
    <string name="rate_us_label">Rate Us</string>

    <string name="feedback_email_title">Peekfolio - Feedback</string>
    <string name="feedback_email_address">dev.peekfolio@gmail.com</string>
    <string name="feedback_email_error">There are no email clients installed.</string>
    <string name="send_feedback_label">Send Feedback</string>
    <string name="about_label">About</string>
    <string name="version_label">Purrito version</string>
    <string name="open_source_licenses_label">Open source licenses</string>
    <string name="open_source_license_details">License details for open source software</string>
    <string name="general_label">General</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="your_favorites_live_here">Your Favorites will live here</string>
    <string name="explore_thousands_of_photos">Explore thousands of cat and dog photos and add them to your favorites.</string>
</resources>
